--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="box"><a class="line" href="https://wa.me/6285183397447">WhatsApp utama</a></div>
       <div class="box"><a class="line" href="https://wa.me/6288212898608">WhatsApp rekber</a></div>
       <div class="box"><a class="line" href="https://whatsapp.com/channel/0029VbAhoIMCRs1qvCsddA44">Saluran stok</a></div>
-      <div class="box"><a class="line" href="https://www.tiktok.com/@anapkemrenn?_t=ZS-8tkdn8AXKcb&_r=1">Tiktok</a></div>
+      <div class="box"><a class="line" href="https://anapluvcatt.github.io/list-own-evos/">list own pt</a></div>
     </div>
   </main>
 
